# PTPE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ST7735_TFT.c  Skylanders.c  Skylanders.h  build_all.sh  build_rp2040.sh  build_rp2350.sh  hw_config.c  main.c  menu.c  menu.h  shared.c  shared.h  tusb_config.h  usb_descriptors.c
src/: Skylanders.h  main.c  menu.h  sdmenu.c  sdmenu.h  shared.c  shared.h
